--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,10 +11,10 @@
 
             <h4 class="text-center my-3 pb-3">To Do App</h4>
 
-            <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2" method="post">
+            <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2" method="post" action="/Home/Add">
               <div class="col-12">
                 <div class="form-outline">
-                  <input type="text" id="form1" class="form-control" />
+                  <input type="text" id="form1" name="textElement" class="form-control" />
                   <label class="form-label" for="form1">Enter a task here</label>
                 </div>
               </div>
@@ -22,16 +22,11 @@
               <div class="col-12">
                 <button type="submit" class="btn btn-primary">Save</button>
               </div>
-
-              <div class="col-12">
-                <button type="submit" class="btn btn-warning">Get tasks</button>
-              </div>
             </form>
 
             <table class="table mb-4">
               <thead>
                 <tr>
-                  <th scope="col">No.</th>
                   <th scope="col">Todo item</th>
                   <th scope="col">Completed</th>
                   <th scope="col">Actions</th>
@@ -41,14 +36,13 @@
                 @foreach (var toDoElement in Model)
                 {
                   <tr>
-                    <th scope="row">@toDoElement.Id</th>
                     <td>@toDoElement.Text</td>
                     <td>
                         <input class="form-check-input" type="checkbox" checked="@toDoElement.Completed" onClick="return false;">
                     </td>
                     <td>
-                      <button type="submit" class="btn btn-danger">Delete</button>
-                      <button type="submit" class="btn btn-success ms-1">Finished</button>
+                      @Html.ActionLink("Delete", "Delete", new { id = @toDoElement.Id} , new { @class = "btn btn-danger"})
+                      @Html.ActionLink("Finished", "Finish", new { id = @toDoElement.Id} , new { @class = "btn btn-success ms-1"})
                     </td>
                   </tr>
                 }
